bug: 72418 HTML: phonetic names too small to be read in the Address Book
- Applying similar changes in the html client as in Ajax client in bug 72324
-  increase font size of ruby tag

Reviewboard url: https://reviewboard.eng.vmware.com/r/362813/

http://bugzilla.zimbra.com/show_bug.cgi?id=72418

Copied from Perforce
 Change: 388659

--- a/WebRoot/css/zhtml.css
+++ b/WebRoot/css/zhtml.css
@@ -1371,3 +1371,5 @@ input[disabled] {
 .ImgPrefsHeader{
     width: auto !important;
 }
+
+ruby > rb, rt, rp {font-size: 80%;}
